--- a/mem.html
+++ b/mem.html
@@ -44,7 +44,7 @@
       <h1>Middle Ear Myoclonus (MEM)</h1>
 
       <p>
-       Middle Ear Myoclonus (MEM) is a rare condition where one or both of the tiny muscles in the middle ear — the <strong>tensor tympani</strong> or <strong>stapedius</strong> — begin to contract on their own. These muscle spasms can create clicking, fluttering, or thumping sounds in one or both ears, and in some cases the sounds can even be heard by another person using a stethoscope. 
+       Middle Ear Myoclonus (MEM) is a rare condition where one or both of the tiny muscles in the middle ear — the tensor tympani or stapedius — begin to contract on their own. These muscle spasms can create clicking, fluttering, or thumping sounds in one or both ears, and in some cases the sounds can even be heard by another person using a stethoscope. 
        </p>
        <p>
        The exact cause isn’t always clear, but symptoms can be triggered or worsened by stress, sound exposure, muscle tension, or nerve irritation. Symptoms often come and go and can vary in intensity from day to day.
@@ -53,15 +53,15 @@
 
     <h2>Key features</h2>
     <ul class="features">
-      <li><strong>Involuntary muscle contractions</strong> of the middle ear muscles — usually the tensor tympani or stapedius.</li>
-      <li><strong>Clicking, fluttering, or thumping</strong> sounds in one or both ears.</li>
-      <li>Sounds may be <strong>rhythmic or irregular</strong>, and vary in frequency or intensity.</li>
-      <li>May occur <strong>spontaneously</strong> or be triggered by sound, movement, stress, or tension.</li>
-      <li>Sometimes audible to others (a form of <em>objective tinnitus</em>).</li>
-      <li>Can cause a <strong>sensation of vibration or movement</strong> inside the ear.</li>
-      <li>Symptoms often <strong>come and go</strong>, lasting seconds to minutes or occurring in bursts throughout the day.</li>
-      <li>Associated with <strong>muscle irritability, nerve dysfunction,</strong> or anxiety-related muscle tension in some cases.</li>
-      <li>Typically diagnosed via <strong>clinical evaluation</strong> and by excluding other ear conditions.</li>
+      <li>Involuntary muscle contractions of the middle ear muscles — usually the tensor tympani or stapedius.</li>
+      <li>Clicking, fluttering, or thumping sounds in one or both ears.</li>
+      <li>Sounds may be rhythmic or irregular, and vary in frequency or intensity.</li>
+      <li>May occur spontaneously or be triggered by sound, movement, stress, or tension.</li>
+      <li>Sometimes audible to others (a form of <i>objective tinnitus</i>).</li>
+      <li>Can cause a sensation of vibration or movement inside the ear.</li>
+      <li>Symptoms often come and go, lasting seconds to minutes or occurring in bursts throughout the day.</li>
+      <li>Associated with muscle irritability, nerve dysfunction, or anxiety-related muscle tension in some cases.</li>
+      <li>Typically diagnosed via clinical evaluation and by excluding other ear conditions.</li>
     </ul>
 
       <p>
@@ -91,15 +91,15 @@
 
     <h2>Key features</h2>
     <ul class="features">
-      <li><strong>Involuntary or prolonged contraction</strong> of the tensor tympani muscle in the middle ear.</li>
-      <li>Can cause sensations of <strong>pain, fullness, pressure, fluttering, or vibration</strong> in the affected ear.</li>
-      <li>Often <strong>triggered by sound, talking, chewing, or stress.</strong></li>
-      <li>May cause or worsen <strong>sound sensitivity (hyperacusis)</strong> or discomfort with noise.</li>
-      <li>Can lead to <strong>ear pain or tension</strong> without evidence of middle ear infection.</li>
-      <li>Some individuals report <strong>fluttering sounds</strong> that resemble a spasm or internal vibration.</li>
-      <li>Symptoms often fluctuate and may appear or worsen after <strong>sound exposure</strong> or <strong>acoustic trauma</strong>.</li>
-      <li>Believed to involve <strong>overactivation of the middle ear reflex</strong> and increased muscle excitability.</li>
-      <li>Diagnosis is primarily <strong>clinical</strong>, based on symptoms and ruling out other ear disorders.</li>
+      <li>Involuntary or prolonged contraction of the tensor tympani muscle in the middle ear.</li>
+      <li>Can cause sensations of pain, fullness, pressure, fluttering, or vibration in the affected ear.</li>
+      <li>Often triggered by sound, talking, chewing, or stress.</li>
+      <li>May cause or worsen sound sensitivity (hyperacusis) or discomfort with noise.</li>
+      <li>Can lead to ear pain or tension without evidence of middle ear infection.</li>
+      <li>Some individuals report fluttering sounds that resemble a spasm or internal vibration.</li>
+      <li>Symptoms often fluctuate and may appear or worsen after sound exposure or acoustic trauma.</li>
+      <li>Believed to involve overactivation of the middle ear reflex and increased muscle excitability.</li>
+      <li>Diagnosis is primarily clinical, based on symptoms and ruling out other ear disorders.</li>
     </ul>
 
       <p>
