--- a/tinnitus.html
+++ b/tinnitus.html
@@ -42,7 +42,7 @@
      <h1>Tinnitus</h1>
 
     <p class="lead">
-      <strong>Tinnitus</strong> is the perception of sound in the ears or head without an external source. 
+      Tinnitus is the perception of sound in the ears or head without an external source. 
       It can manifest as ringing, buzzing, hissing, clicking, or other noises. Tinnitus can be 
       temporary or chronic, mild or severe, and may affect one or both ears. While it is often 
       associated with hearing loss, it can also occur in individuals with normal hearing. The 
@@ -130,7 +130,7 @@ outcomes can vary and that rigorous, large-scale studies supporting its efficacy
   unsubstantiated by solid evidence.
 </p>
 <p>
-Each team member at <i>Hyperacusis Guide</i> suffers from some degree of hyperacusis, noxacusis, and tinnitus. Three of us are completely homebound and unable to work, drive a car, or even walk outside. In the early stages of our conditions, each of us attempted to follow the principles of Tinnitus Retraining Therapy (TRT). Not only did these methods fail to bring improvement, but in several cases, they appeared to contribute to further worsening. Despite the widespread promotion of TRT within audiology, we believe the approach does not adequately address the complex reality of severe cases and often dismisses the experiences of those most profoundly affected.
+Every member of the <i>Hyperacusis Guide</i> team suffers from varying levels of hyperacusis, noxacusis, and tinnitus. Three of us are completely homebound and unable to work, drive a car, or even walk outside. In the early stages of our conditions, each of us attempted to follow the principles of Tinnitus Retraining Therapy (TRT). Not only did these methods fail to bring improvement, but in several cases, they appeared to contribute to further worsening. Despite the widespread promotion of TRT within audiology, we believe the approach does not adequately address the complex reality of severe cases and often dismisses the experiences of those most profoundly affected.
 </p>
 
 <p>
@@ -158,8 +158,8 @@ Unfortunately, because the severity of hyperacusis and tinnitus symptoms cannot 
 </p>
 
       <p>
-      For a better understanding of Dr. Jastreboff’s attitude towards tinnitus and hyperacusis sufferers, please take a moment to review the series of video excerpts below where he explains, rather candidly, which patients he feels are unlikely to respond to Tinnitus Retraining Therapy (TRT) — implying that they have ulterior motives such as social attention or financial gain. <a class="link" href="https://youtu.be/11SUmiq3UCU" target="_blank" 
-        rel="noopener noreferrer">The full video can be found here</a>. At <i>Hyperacusis Guide</i>, we contend that Dr. Jastreboff’s approach has caused lasting damage to the advancement of tinnitus and hyperacusis research, possibly setting the field back by a few decades.
+      For a clearer understanding of Dr. Jastreboff’s attitude towards tinnitus and hyperacusis sufferers, please take a moment to review the series of video excerpts below where he explains, rather candidly, which patients he feels are unlikely to respond to Tinnitus Retraining Therapy (TRT) — implying that they have a hidden agenda such as social attention or financial gain. <a class="link" href="https://youtu.be/11SUmiq3UCU" target="_blank" 
+        rel="noopener noreferrer">The full video can be found here</a>. At <i>Hyperacusis Guide</i>, we contend that Dr. Jastreboff’s approach has caused lasting damage to the advancement of tinnitus and hyperacusis research.
       </p>
       <p>
        <img src="Jastreboff/1.jpeg" class="full-width-image">
