--- a/community.html
+++ b/community.html
@@ -53,14 +53,14 @@
       <div class="page-break" aria-hidden="true"></div>
       <h1>Discord</h1>
       <p>
-      <a class="link" href="https://discord.gg/6wWWwqxE" target="_blank" rel="noopener noreferrer">Hyperacusis Guide Discord Server</a> — This is our official server and the easiest way to reach us. Since we also live with hyperacusis, noxacusis, tinnitus, and TTTS, we can help newly affected patients navigate management strategies and treatment options.
+      <a class="link" href="https://discord.gg/6wWWwqxE" target="_blank" rel="noopener noreferrer">Hyperacusis Guide Discord Server</a> — This is our official server and the easiest way to reach us. Our personal experience with hyperacusis, noxacusis, and tinnitus allows us to assist newly affected individuals in finding effective management strategies and treatments.
       </P>
       <p>
       <a class="link" href="https://discord.gg/TwqVrAQq" target="_blank" rel="noopener noreferrer">Hyperacusis Support Discord Server</a> — A community of over 400 members who share their personal experiences, treatment outcomes, and insights. <i>Hyperacusis Guide highly recommends this server.</i>
       </P>
       <p>
       <a class="link" href="https://discord.gg/H3MqMv9X" target="_blank" rel="noopener noreferrer">Tinnitus Labs Discord Server</a> —
-      A community of over 1,900 members primarily focused on the treatment of tinnitus using a DIY adaptation of the <a class="link" href="https://www.tinnitushub.com/dr-susan-shore-auricle-questions-answers/" target="_blank" rel="noopener noreferrer">Susan Shore device</a> — originally developed at the University of Michigan but not yet commercially available. Members also discuss other auditory conditions, such as hyperacusis and noxacusis, and share the latest research.
+      A community of over 1,900 members primarily focused on the treatment of tinnitus using a DIY adaptation of the <a class="link" href="https://www.tinnitushub.com/dr-susan-shore-auricle-questions-answers/" target="_blank" rel="noopener noreferrer">Susan Shore device</a>, originally developed at the University of Michigan but not yet commercially available. Members also discuss other auditory conditions, such as hyperacusis and noxacusis, and share the latest research.
       </p>
 
       
@@ -74,27 +74,27 @@
 
       <p>
       <a class="link" href="https://www.facebook.com/groups/middleearmyoclonus/" target="_blank" rel="noopener noreferrer">Middle Ear Myoclonus (MEM) Support Group</a> —
-      A community of over 2,000 members focused on the medical and surgical management of middle ear myoclonus (MEM) 
+      A community of over 2,000 members focused on the medical and surgical management of Middle Ear Myoclonus (MEM). 
       </p>
 
       <p>
       <a class="link" href="https://www.facebook.com/groups/503100723229728/" target="_blank" rel="noopener noreferrer">Tonic Tensor Tympani Syndrome (TTTS) Support Group</a>  —
-      A community of over 2,300 members dedicated to the medical and surgical management of tonic tensor tympani syndrome (TTTS).
+      A community of over 2,300 members dedicated to the medical and surgical management of Tonic Tensor Tympani Syndrome (TTTS).
       </p>
 
       <div class="page-break" aria-hidden="true"></div>
       <h1>Forums</h1>
       <p>
-      When seeking tinnitus and hyperacusis advice on Reddit and other forums, it’s important to remain wary — many posts are inaccurate or misleading, and inexperienced sufferers can take a single success story as a guarantee, which may lead to unrealistic expectations.
+      When seeking tinnitus and hyperacusis advice on Reddit and other forums, it’s important to remain wary. Many posts are inaccurate or misleading, and inexperienced sufferers can take a single success story as a guarantee, which may lead to unrealistic expectations.
       </p>
       <p>
-      <a class="link" href="https://www.reddit.com/r/hyperacusis/" target="_blank" rel="noopener noreferrer">Reddit — Hyperacusis</a>
+      <a class="link" href="https://www.reddit.com/r/hyperacusis/" target="_blank" rel="noopener noreferrer">Reddit (Hyperacusis)</a>
       </p>
       <p>
-      <a class="link" href="https://www.reddit.com/r/hyperacusis/" target="_blank" rel="noopener noreferrer">Reddit — Noxacusis</a>
+      <a class="link" href="https://www.reddit.com/r/hyperacusis/" target="_blank" rel="noopener noreferrer">Reddit (Noxacusis)</a>
       </p>
       <p>
-      <a class="link" href="https://www.reddit.com/r/tinnitus/" target="_blank" rel="noopener noreferrer">Reddit — Tinnitus</a>
+      <a class="link" href="https://www.reddit.com/r/tinnitus/" target="_blank" rel="noopener noreferrer">Reddit (Tinnitus)</a>
       </p>
       <p>
       <a class="link" href="https://www.tinnitustalk.com/" target="_blank" rel="noopener noreferrer">Tinnitus Talk</a>
