--- a/imaging.html
+++ b/imaging.html
@@ -66,12 +66,12 @@
 <ul>
   <li>Performed for evaluation of hyperacusis, noxacusis, TTTS, MEM, and tinnitus.</li>
   <li>Ultra-thin slices (typically 0.5–0.6 mm) for high spatial resolution.</li>
-  <li>Reconstructions in axial and coronal planes; overlapping slices recommended.</li>
   <li>Field of view focused on the temporal bones.</li>
   <li>Non-contrast imaging is generally sufficient.</li>
-  <li>Multiplanar and 3D reconstructions can aid assessment of ossicles, cochlea and semicircular canals, and mastoid air cells.</li>
+  <li>Multiplanar and 3D reconstructions can aid assessment of ossicles, cochlea, semicircular canals, and mastoid air cells.</li>
   <li>Helps identify structural causes and supports both conservative and surgical management planning.</li>
 </ul>
+<i>High-resolution temporal bone CT scan is a very commonly ordered study and nearly every hospital and imaging center has a standardized protocol for this exam. Any ENT specialist should be able to order this exam for you.</i>
     </article>
   </main>
 
