--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
       It is common for family members to urge you to seek treatment when they see how much you are struggling. However, because severe hyperacusis is a rare and poorly understood condition, even well-meaning advice can be harmful. In some cases, families may assume the condition is purely psychological — an impression often reinforced by misinformation found online. 
       </p>
       <p>
-      <strong><i>**Remember that if someone pressures you into treatment that exposes you to sound levels beyond your limits (Tinnitus Retraining Therapy (TRT), inpatient psychiatric treatment, etc.) resulting in a setback, you are the one who must live with the consequences — no one else experiences your suffering firsthand, and the most they can offer you is an apology.**
+      <strong><i>**Remember that if someone pressures you into treatment that exposes you to sound levels beyond your limits (Tinnitus Retraining Therapy (TRT), inpatient psychiatric treatment, etc.) resulting in a setback, you are the one who must live with the consequences — no one else experiences your suffering firsthand, and the most they can do is offer you an apology.**
       </i></strong>
       </p>
 
@@ -123,8 +123,10 @@
         <ul>
           <li>&lt;= 0.6 mm slice thickness (thin-cut protocol).</li>
           <li>Ensure both sides are imaged.</li>
+          
         </ul>
         <li>Purpose: Rule out bony or structural causes (superior semicircular canal dehiscence syndrome, ossicular abnormalities, round or oval window defects, etc.) and evaluate surgical options.</li>
+        <i>High-resolution temporal bone CT scan is a very commonly ordered study and nearly every hospital and imaging center has a standardized protocol for this exam. Any ENT specialist should be able to order this exam for you, however, after the imaging is performed you will likely need referal to a highly-specialized ENT with experience treating hyperacusis — ideally with expertise in the Silverstein procedure.</i>
       </ul>
 
       <h2>6. Specialist Review</h2>
