--- a/tinnitus.html
+++ b/tinnitus.html
@@ -107,7 +107,7 @@ outcomes can vary and that rigorous, large-scale studies supporting its efficacy
       combination with other therapies, such as sound therapy or counseling, to enhance overall quality of life.
     </p>
 
-    <h2>Key Features and Benefits of CBT</h2>
+    <h2>Key Features</h2>
     <ul class="features">
       <li>Helps patients identify and modify negative thoughts and beliefs about tinnitus or sound sensitivity.</li>
       <li>Reduces anxiety, stress, and emotional distress associated with chronic auditory symptoms.</li>
@@ -154,11 +154,11 @@ At <i>Hyperacusis Guide</i>, we are not aware of a single case in which an indiv
 </p>
 
 <p>
-Unfortunately, because the severity of hyperacusis and tinnitus symptoms cannot be measured objectively with a diagnostic test — aside from the Loudness Discomfort Level (LDL) test, which is not only unreliable but may also be impossible for individuals with catastrophic hyperacusis to undergo safely — and relies almost entirely on the patient’s subjective description, it is impossible to definitively prove or disprove an "expert’s" assessment. This makes it difficult to challenge opinions of "experts", such as Dr. Jastreboff, as there is no objective standard for comparison.
+Unfortunately, because the severity of hyperacusis and tinnitus symptoms cannot be measured objectively with a diagnostic test — aside from the <a class="link" href="https://pmc.ncbi.nlm.nih.gov/articles/PMC8901946/" target="_blank" rel="noopener noreferrer">Loudness Discomfort Level (LDL) test</a>, which may be impossible for individuals with catastrophic hyperacusis to undergo safely — and relies almost entirely on the patient’s subjective description, it is impossible to definitively prove or disprove an "expert’s" assessment. This makes it difficult to challenge opinions of "experts", such as Dr. Jastreboff, as there is no objective standard for comparison.
 </p>
 
       <p>
-      For a clearer understanding of Dr. Jastreboff’s attitude towards tinnitus and hyperacusis sufferers, please take a moment to review the series of video excerpts below where he explains, rather candidly, which patients he feels are unlikely to respond to Tinnitus Retraining Therapy (TRT) — implying that they have a hidden agenda such as social attention or financial gain. <a class="link" href="https://youtu.be/11SUmiq3UCU" target="_blank" 
+      For a clearer understanding of Dr. Jastreboff’s attitude towards tinnitus and hyperacusis sufferers, please take a moment to review the series of video excerpts below where he explains, rather candidly, which patients he feels are unlikely to respond to Tinnitus Retraining Therapy (TRT) — implying that they may have a hidden agenda such as social attention or financial gain. <a class="link" href="https://youtu.be/11SUmiq3UCU" target="_blank" 
         rel="noopener noreferrer">The full video can be found here</a>. At <i>Hyperacusis Guide</i>, we contend that Dr. Jastreboff’s approach has caused lasting damage to the advancement of tinnitus and hyperacusis research.
       </p>
       <p>
