--- a/index.html
+++ b/index.html
@@ -11,18 +11,18 @@
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css">
 </head>
 <body>
+
   <header>
     <h1 class="logo">
-      <i class="fa fa-compass"></i>
-      Hyperacusis Guide
-    </h1>
+    <img src="logo.png" class="logo-image">
+    Hyperacusis Guide</h1>
     <button id="hamburger">&#9776;</button>
   </header>
 
   <nav id="sidebar">
     <ul>
       <li><a href="index.html">Precautionary Guide</a></li>
-      <li><a href="tinnitus.html">Tinnitus Retraining Therapy</a></li>
+      <li><a href="tinnitus.html">Tinnitus</a></li>
       <li><a href="hyperacusis.html">Hyperacusis & Noxacusis</a></li>
       <li><a href="mem.html">MEM & TTTS</a></li>
       <li><a href="imaging.html">Diagnostic Imaging</a></li>
@@ -126,7 +126,7 @@
           
         </ul>
         <li>Purpose: Rule out bony or structural causes (superior semicircular canal dehiscence syndrome, ossicular abnormalities, round or oval window defects, etc.) and evaluate surgical options.</li>
-        <i>High-resolution temporal bone CT scan is a very commonly ordered study and nearly every hospital and imaging center has a standardized protocol for this exam. Any ENT specialist should be able to order this exam for you, however, after the imaging is performed you will likely need referal to a highly-specialized ENT with experience treating hyperacusis — ideally with expertise in the Silverstein procedure.</i>
+        <i>High-resolution temporal bone CT scan is a very commonly ordered study and nearly every hospital and imaging center has a standardized protocol for this exam. Any ENT specialist should be able to order this exam, however, after the imaging is performed you will likely need referal to a highly-specialized ENT with experience treating hyperacusis — ideally with expertise in the Silverstein procedure.</i>
       </ul>
 
       <h2>6. Specialist Review</h2>
