--- a/tinnitus.html
+++ b/tinnitus.html
@@ -14,7 +14,7 @@
 <body>
   <header>
     <h1 class="logo">
-    <i class="fa fa-compass"></i>
+    <img src="logo.png" class="logo-image">
     Hyperacusis Guide</h1>
     <button id="hamburger">&#9776;</button>
   </header>
@@ -22,7 +22,7 @@
   <nav id="sidebar">
     <ul>
       <li><a href="index.html">Precautionary Guide</a></li>
-      <li><a href="tinnitus.html">Tinnitus Retraining Therapy</a></li>
+      <li><a href="tinnitus.html">Tinnitus</a></li>
       <li><a href="hyperacusis.html">Hyperacusis & Noxacusis</a></li>
       <li><a href="mem.html">MEM & TTTS</a></li>
       <li><a href="imaging.html">Diagnostic Imaging</a></li>
@@ -62,6 +62,42 @@
       <li>Diagnosis is primarily clinical, often involving audiological testing and medical evaluation.</li>
       <li>Management may include sound therapy, counseling, stress reduction, or medical interventions.</li>
     </ul>
+    <div class="page-break" aria-hidden="true"></div>
+
+    <h1>Susan Shore Device</h1>
+
+      <p class="lead">
+    The <a class="link" href="https://www.tinnitushub.com/dr-susan-shore-auricle-questions-answers/" target="_blank" rel="noopener noreferrer">Susan Shore device</a>, developed at the University of Michigan, is an experimental treatment 
+    for tinnitus that uses a technique known as <strong>bimodal neuromodulation</strong>. 
+    This approach combines precisely timed sounds with mild electrical stimulation of the face or neck 
+    to retrain the brain’s auditory pathways and reduce tinnitus perception. 
+    The device is currently undergoing clinical testing and has shown 
+    promising results in reducing tinnitus loudness and annoyance
+    for certain individuals, particularly those whose tinnitus changes with jaw or neck movement.
+  </p>
+
+  <h2>Key Features</h2>
+  <ul>
+    <li>Combines sound stimulation with mild electrical impulses to the skin or neck.</li>
+    <li>Aims to “desynchronize” overactive neural patterns linked to tinnitus.</li>
+    <li>Developed by Dr. Susan Shore and her team at the University of Michigan.</li>
+    <li>Most effective in individuals with somatic tinnitus (tinnitus influenced by head, jaw, or neck movement).</li>
+    <li>Clinical trials have shown reductions in both tinnitus loudness and distress in some patients.</li>
+    <li>Not yet commercially available, but FDA review and future distribution are anticipated.</li>
+  </ul>
+
+        <p>
+      The <a class="link" href="https://discord.gg/H3MqMv9X" target="_blank" rel="noopener noreferrer">Tinnitus Labs Discord Server</a> is
+      a community of over 1,900 members primarily focused on the treatment of tinnitus using a DIY adaptation of the Susan Shore device.
+      </p>
+
+        <p>
+      The latest information and Q&A regarding the official Susan Shore device <a class="link" href="https://tinnitusquest.com/events/auricle-update/?gad_source=1&gad_campaignid=22632943177&gbraid=0AAAAA_lEsuzLbmoBDIvhRCssy5hMEHZFh&gclid=CjwKCAiAzrbIBhA3EiwAUBaUdRH17IwgkiUeUrccfgYlinaVRxtzoP-wJfLyY0lIketxaZmnLFKkDBoCSXEQAvD_BwE" target="_blank" rel="noopener noreferrer">can be found here</a>.
+      </p>
+
+
+
+
       <div class="page-break" aria-hidden="true"></div>
 
     <h1>Tinnitus Retraining Therapy (TRT)</h1>
@@ -154,7 +190,7 @@ At <i>Hyperacusis Guide</i>, we are not aware of a single case in which an indiv
 </p>
 
 <p>
-Unfortunately, because the severity of hyperacusis and tinnitus symptoms cannot be measured objectively with a diagnostic test — aside from the <a class="link" href="https://pmc.ncbi.nlm.nih.gov/articles/PMC8901946/" target="_blank" rel="noopener noreferrer">Loudness Discomfort Level (LDL) test</a>, which may be impossible for individuals with catastrophic hyperacusis to undergo safely — and relies almost entirely on the patient’s subjective description, it is impossible to definitively prove or disprove an "expert’s" assessment. This makes it difficult to challenge opinions of "experts", such as Dr. Jastreboff, as there is no objective standard for comparison.
+The severity of hyperacusis and tinnitus cannot currently be measured through objective diagnostic methods, aside from the <a class="link" href="https://pmc.ncbi.nlm.nih.gov/articles/PMC8901946/" target="_blank" rel="noopener noreferrer">Loudness Discomfort Level (LDL) test</a>, which is often unsafe or intolerable for individuals with catastrophic hyperacusis. Consequently, clinical evaluations depend largely on patients’ subjective reports, making it impossible to conclusively prove or disprove an "expert’s" assessment. The absence of objective diagnostic criteria makes it particularly difficult to challange the opinions of "experts" such as Dr. Jastreboff.
 </p>
 
       <p>
