--- a/community.html
+++ b/community.html
@@ -12,21 +12,17 @@
   <link href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100..900;1,100..900&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css">
 </head>
-<body>
-  
-  <!-- Header -->
   <header>
     <h1 class="logo">
-    <i class="fa fa-compass"></i>
+    <img src="logo.png" class="logo-image">
     Hyperacusis Guide</h1>
     <button id="hamburger">&#9776;</button>
   </header>
 
-  <!-- Sidebar Navigation -->
   <nav id="sidebar">
     <ul>
       <li><a href="index.html">Precautionary Guide</a></li>
-      <li><a href="tinnitus.html">Tinnitus Retraining Therapy</a></li>
+      <li><a href="tinnitus.html">Tinnitus</a></li>
       <li><a href="hyperacusis.html">Hyperacusis & Noxacusis</a></li>
       <li><a href="mem.html">MEM & TTTS</a></li>
       <li><a href="imaging.html">Diagnostic Imaging</a></li>
@@ -40,6 +36,7 @@
       <li><a href="about.html">About</a></li>
     </ul>
   </nav>
+
 
   <!-- Main Content -->
   <main>
