--- a/contact.html
+++ b/contact.html
@@ -14,7 +14,7 @@
 <body>
   <header>
     <h1 class="logo">
-    <i class="fa fa-compass"></i>
+    <img src="logo.png" class="logo-image">
     Hyperacusis Guide</h1>
     <button id="hamburger">&#9776;</button>
   </header>
@@ -22,7 +22,7 @@
   <nav id="sidebar">
     <ul>
       <li><a href="index.html">Precautionary Guide</a></li>
-      <li><a href="tinnitus.html">Tinnitus Retraining Therapy</a></li>
+      <li><a href="tinnitus.html">Tinnitus</a></li>
       <li><a href="hyperacusis.html">Hyperacusis & Noxacusis</a></li>
       <li><a href="mem.html">MEM & TTTS</a></li>
       <li><a href="imaging.html">Diagnostic Imaging</a></li>
@@ -36,6 +36,7 @@
       <li><a href="about.html">About</a></li>
     </ul>
   </nav>
+
 
   <main>
     <article>
