--- a/imaging.html
+++ b/imaging.html
@@ -14,7 +14,7 @@
 <body>
   <header>
     <h1 class="logo">
-    <i class="fa fa-compass"></i>
+    <img src="logo.png" class="logo-image">
     Hyperacusis Guide</h1>
     <button id="hamburger">&#9776;</button>
   </header>
@@ -22,7 +22,7 @@
   <nav id="sidebar">
     <ul>
       <li><a href="index.html">Precautionary Guide</a></li>
-      <li><a href="tinnitus.html">Tinnitus Retraining Therapy</a></li>
+      <li><a href="tinnitus.html">Tinnitus</a></li>
       <li><a href="hyperacusis.html">Hyperacusis & Noxacusis</a></li>
       <li><a href="mem.html">MEM & TTTS</a></li>
       <li><a href="imaging.html">Diagnostic Imaging</a></li>
@@ -36,6 +36,7 @@
       <li><a href="about.html">About</a></li>
     </ul>
   </nav>
+
 
   <main>
     <article>
@@ -71,7 +72,7 @@
   <li>Multiplanar and 3D reconstructions can aid assessment of ossicles, cochlea, semicircular canals, and mastoid air cells.</li>
   <li>Helps identify structural causes and supports both conservative and surgical management planning.</li>
 </ul>
-<i>High-resolution temporal bone CT scan is a very commonly ordered study and nearly every hospital and imaging center has a standardized protocol for this exam. Any ENT specialist should be able to order this exam for you.</i>
+<i>High-resolution temporal bone CT scan is a very commonly ordered study and nearly every hospital and imaging center has a standardized protocol for this exam. Any ENT specialist should be able to order this exam, however, after the imaging is performed you will likely need referal to a highly-specialized ENT with experience treating hyperacusis — ideally with expertise in the Silverstein procedure.</i>
     </article>
   </main>
 
