--- a/mem.html
+++ b/mem.html
@@ -15,16 +15,15 @@
 <body>
   <header>
     <h1 class="logo">
-      <i class="fa fa-compass"></i>
-      Hyperacusis Guide
-    </h1>
+    <img src="logo.png" class="logo-image">
+    Hyperacusis Guide</h1>
     <button id="hamburger">&#9776;</button>
   </header>
 
   <nav id="sidebar">
     <ul>
       <li><a href="index.html">Precautionary Guide</a></li>
-      <li><a href="tinnitus.html">Tinnitus Retraining Therapy</a></li>
+      <li><a href="tinnitus.html">Tinnitus</a></li>
       <li><a href="hyperacusis.html">Hyperacusis & Noxacusis</a></li>
       <li><a href="mem.html">MEM & TTTS</a></li>
       <li><a href="imaging.html">Diagnostic Imaging</a></li>
